fix: better contrast on user message container

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -8,7 +8,7 @@
   --card-foreground: 84 80% 10%;
   --popover: 0 0% 100%;
   --popover-foreground: 84 80% 10%;
-  --primary: 84 58% 55%;
+  --primary: 84 58% 45%;
   --primary-foreground: 84 10% 98%;
   --secondary: 65 70% 60%;
   --secondary-foreground: 84 80% 10%;
@@ -51,7 +51,7 @@
   --card-foreground: 84 40% 98%;
   --popover: 84 47% 8%;
   --popover-foreground: 84 40% 98%;
-  --primary: 84 70% 50%;
+  --primary: 84 70% 40%;
   --primary-foreground: 84 40% 98%;
   --secondary: 65 80% 60%;
   --secondary-foreground: 84 40% 98%;
